--- a/index.html
+++ b/index.html
@@ -67,8 +67,39 @@
                     </div>
                 </div>
 
+                
+                 <div class="pricing-table__include">
+                    <h4 class="pricing-table__body-title">Included In All Web Design Projects:</h4>
+                    
+                 <ul class="pricing-table__include-list">
+                    <li class="list-item">
+                        <p>Professionally styled, custom designs that match your branding and vision</p></li>
+                    <li class="list-item">
+                        <p>Positive user experience navigation and designs</p></li>
+                    <li class="list-item">
+                        <p>Responsive design</p></li>
+                    <li class="list-item">
+                        <p>Lead-generating and performance-tested website copy</p></li>
+                    <li class="list-item">
+                        <p>Designs and copy optimized for SEO</p></li>
+                    <li class="list-item">
+                        <p>Ecommerce functionality</p></li>
+                    <li class="list-item">
+                        <p>Database integration</p></li>
+                    <li class="list-item">
+                        <p>New website page creation</p></li>
+                    <li class="list-item">
+                        <p>Access to our in-house revenue acceleration software, MarketingCloudFX</p></li>
+                    <li class="list-item">
+                        <p>Closed-loop call, lead, customer journey, and revenue tracking</p></li>
+                    </ul>
+                 </div>
 
-                <!-- <div class="pricing-table__include"> --> 
+                 <div class="pricing-table__container-btn">
+                    <a class="btn-pricing" href="/">
+                        Get My Custom Quote
+                    </a>
+                 </div>
 
 
 
